header text-align issues

--- a/src/app/header/header.component.less
+++ b/src/app/header/header.component.less
@@ -134,7 +134,7 @@ button.close {
   float:right;
   text-align: center;
   }
-  @media screen and (max-width:360px){
+  @media screen and (max-width:380px){
     font-size:0.6em;
     text-align: right;
   }
